[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
itertools = "0.8"
rayon = "1.2.1"
nom = "5.0.1"
derive_more = "0.99.2"
regex = "1.3"
serde = "1.0"
num = "0.2"
